Fixed bug #63980 (object members get trimmed by zero bytes)